chapter3/apacheserver/main.tf
provider "aws" {
  region = "us-east-1"
}

data "aws_ami" "amazon-linux-2" {
  most_recent = true

  filter {
    name = "owner-alias"
    values = ["amazon"]
  }

  filter {
    name = "name"
    values = ["amzn2-ami-*-x86_64-gp2"]
  }
}

resource "aws_security_group" "standard-web-node" {
  name = "standard-web-node"
  description = "Terraform autogenerated aws security group"

  # HTTP
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # SSH
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # out anywhere
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "web" {
  ami = "${data.aws_ami.amazon-linux-2.id}"
  instance_type = "t2.micro"
  key_name = "first"
  security_groups = ["${aws_security_group.standard-web-node.name}"]#["apache-server"] #have both SSH and HTTP ports open
  user_data = "${file("userdatascript.sh")}"
  
  tags = {
    Name = "Simple HTTP server"
  }
}

output "public_ip" {
  value = "${aws_instance.web.public_ip}"
}
